[gd_scene load_steps=63 format=4 uid="uid://f5y8bwwf03ac"]

[ext_resource type="Texture2D" uid="uid://bv0p50semc7iq" path="res://novos sprites/fundo cidade/1.png" id="1_elsmw"]
[ext_resource type="Script" path="res://cenas/metro.gd" id="1_r71eq"]
[ext_resource type="Texture2D" uid="uid://bjt2uu5twuwmo" path="res://novos sprites/fundo cidade/2.png" id="2_plexf"]
[ext_resource type="Texture2D" uid="uid://dmiv1xwwk2qi5" path="res://novos sprites/fundo cidade/3.png" id="3_3xdjy"]
[ext_resource type="Texture2D" uid="uid://bw3eybephss0t" path="res://novos sprites/fundo cidade/nuvens (1).png" id="4_onufx"]
[ext_resource type="Texture2D" uid="uid://bia6jx3ios0u1" path="res://novos sprites/fundo cidade/4.png" id="5_6q64l"]
[ext_resource type="Texture2D" uid="uid://7wky2ptbcjlx" path="res://novos sprites/fundo cidade/5.png" id="6_pm0vx"]
[ext_resource type="Texture2D" uid="uid://df3sarvcy7d7o" path="res://scripts/VAGAO SUPREMO 480x96.png" id="7_7b1mn"]
[ext_resource type="PackedScene" uid="uid://bo4n7em8jy6w8" path="res://cenas/milesimoteste.tscn" id="8_r0eml"]
[ext_resource type="Texture2D" uid="uid://bux2ro7iv8ga4" path="res://novos sprites/sprite porta.png" id="9_apqb2"]
[ext_resource type="Texture2D" uid="uid://cxrnjkm5lwwcs" path="res://novos sprites/sprite tvzinha 1.png" id="12_jy4l4"]
[ext_resource type="PackedScene" uid="uid://xyv130iwclhk" path="res://cenas/npcteste.tscn" id="16_7xfcr"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8uskl"]
texture = ExtResource("7_7b1mn")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
25:2/0 = 0
24:1/0 = 0
25:1/0 = 0
24:2/0 = 0
17:2/0 = 0
17:1/0 = 0
10:1/0 = 0
10:2/0 = 0
3:2/0 = 0
3:1/0 = 0

[sub_resource type="TileSet" id="TileSet_gwbqk"]
sources/1 = SubResource("TileSetAtlasSource_8uskl")

[sub_resource type="AtlasTexture" id="AtlasTexture_ntppk"]
atlas = ExtResource("9_apqb2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo2bj"]
atlas = ExtResource("9_apqb2")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_drw74"]
atlas = ExtResource("9_apqb2")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6g0xm"]
atlas = ExtResource("9_apqb2")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwwvo"]
atlas = ExtResource("9_apqb2")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ywdoi"]
atlas = ExtResource("9_apqb2")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxmnv"]
atlas = ExtResource("9_apqb2")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvuff"]
atlas = ExtResource("9_apqb2")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fio2"]
atlas = ExtResource("9_apqb2")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_63kxd"]
atlas = ExtResource("9_apqb2")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7dry"]
atlas = ExtResource("9_apqb2")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p55n4"]
atlas = ExtResource("9_apqb2")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ws1e0"]
atlas = ExtResource("9_apqb2")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxfab"]
atlas = ExtResource("9_apqb2")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mm18"]
atlas = ExtResource("9_apqb2")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkxg5"]
atlas = ExtResource("9_apqb2")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lx346"]
atlas = ExtResource("9_apqb2")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxers"]
atlas = ExtResource("9_apqb2")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fy53b"]
atlas = ExtResource("9_apqb2")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_34q5b"]
atlas = ExtResource("9_apqb2")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k54b7"]
atlas = ExtResource("9_apqb2")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_78id0"]
atlas = ExtResource("9_apqb2")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fb4p2"]
atlas = ExtResource("9_apqb2")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b160m"]
atlas = ExtResource("9_apqb2")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbjni"]
atlas = ExtResource("9_apqb2")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_083tj"]
atlas = ExtResource("9_apqb2")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2kla6"]
atlas = ExtResource("9_apqb2")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w2uo"]
atlas = ExtResource("9_apqb2")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_usc7g"]
atlas = ExtResource("9_apqb2")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_emni1"]
atlas = ExtResource("9_apqb2")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eyyix"]
atlas = ExtResource("9_apqb2")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bv0d1"]
atlas = ExtResource("9_apqb2")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bvj8"]
atlas = ExtResource("9_apqb2")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5k1g"]
atlas = ExtResource("9_apqb2")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4paw"]
atlas = ExtResource("9_apqb2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_w7gat"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntppk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo2bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_drw74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6g0xm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwwvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ywdoi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxmnv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvuff")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fio2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63kxd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7dry")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p55n4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ws1e0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxfab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mm18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkxg5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lx346")
}, {
"duration": 120.0,
"texture": SubResource("AtlasTexture_gxers")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fy53b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34q5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k54b7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78id0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fb4p2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b160m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbjni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_083tj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kla6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w2uo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usc7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_emni1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyyix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bv0d1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bvj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5k1g")
}, {
"duration": 720.0,
"texture": SubResource("AtlasTexture_d4paw")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u1ch8"]
size = Vector2(20, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i4j0q"]
size = Vector2(488, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_diiwb"]
size = Vector2(20, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wxgb4"]
size = Vector2(488, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2wo5t"]
size = Vector2(448, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_shlko"]
size = Vector2(3, 72)

[sub_resource type="AtlasTexture" id="AtlasTexture_k76nm"]
atlas = ExtResource("12_jy4l4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lq0sb"]
atlas = ExtResource("12_jy4l4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_00bcd"]
atlas = ExtResource("12_jy4l4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvtmq"]
atlas = ExtResource("12_jy4l4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_usk5y"]
atlas = ExtResource("12_jy4l4")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fknab"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k76nm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lq0sb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00bcd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvtmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usk5y")
}],
"loop": true,
"name": &"default",
"speed": 0.25
}]

[node name="metro" type="Node2D"]
scale = Vector2(2.37244, 2.37244)
script = ExtResource("1_r71eq")

[node name="ParallaxBackground" type="Node2D" parent="."]

[node name="ParallaxLayer" type="Parallax2D" parent="ParallaxBackground"]
repeat_size = Vector2(64, 0)
autoscroll = Vector2(50, 0)
repeat_times = 11
ignore_camera_scroll = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(226.771, 33.7206)
texture = ExtResource("1_elsmw")

[node name="ParallaxLayer3" type="Parallax2D" parent="ParallaxBackground"]
repeat_size = Vector2(64, 0)
autoscroll = Vector2(70, 0)
repeat_times = 11
ignore_camera_scroll = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(226.771, 33.7206)
texture = ExtResource("2_plexf")

[node name="ParallaxLayer4" type="Parallax2D" parent="ParallaxBackground"]
repeat_size = Vector2(64, 0)
autoscroll = Vector2(100, 0)
repeat_times = 11
ignore_camera_scroll = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(226.771, 33.7206)
texture = ExtResource("3_3xdjy")

[node name="ParallaxLayer2" type="Parallax2D" parent="ParallaxBackground"]
repeat_size = Vector2(64, 0)
autoscroll = Vector2(120, 0)
repeat_times = 11
ignore_camera_scroll = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(226.771, 33.7206)
texture = ExtResource("4_onufx")

[node name="ParallaxLayer5" type="Parallax2D" parent="ParallaxBackground"]
repeat_size = Vector2(64, 0)
autoscroll = Vector2(150, 0)
repeat_times = 11
ignore_camera_scroll = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer5"]
position = Vector2(226.771, 33.7206)
texture = ExtResource("5_6q64l")

[node name="ParallaxLayer6" type="Parallax2D" parent="ParallaxBackground"]
repeat_size = Vector2(64, 0)
autoscroll = Vector2(200, 0)
repeat_times = 11
ignore_camera_scroll = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer6"]
position = Vector2(226.771, 33.7206)
texture = ExtResource("6_pm0vx")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAEAAQAAAAEAAAAAAAIAAQAAAAIAAAAAAAMAAQAAAAMAAAAAAAQAAQAAAAQAAAAAAAUAAQAAAAUAAAABAAAAAQABAAAAAAABAAEAAQABAAEAAAABAAIAAQABAAIAAAABAAMAAQABAAMAAAABAAQAAQABAAQAAAABAAUAAQABAAUAAAACAAAAAQACAAAAAAACAAEAAQACAAEAAAACAAIAAQACAAIAAAACAAMAAQACAAMAAAACAAQAAQACAAQAAAACAAUAAQACAAUAAAADAAAAAQADAAAAAAADAAEAAQADAAEAAAADAAIAAQADAAIAAAADAAMAAQADAAMAAAADAAQAAQADAAQAAAADAAUAAQADAAUAAAAEAAAAAQAEAAAAAAAEAAEAAQAEAAEAAAAEAAIAAQAEAAIAAAAEAAMAAQAEAAMAAAAEAAQAAQAEAAQAAAAEAAUAAQAEAAUAAAAFAAAAAQAFAAAAAAAFAAEAAQAFAAEAAAAFAAIAAQAFAAIAAAAFAAMAAQAFAAMAAAAFAAQAAQAFAAQAAAAFAAUAAQAFAAUAAAAGAAAAAQAGAAAAAAAGAAEAAQAGAAEAAAAGAAIAAQAGAAIAAAAGAAMAAQAGAAMAAAAGAAQAAQAGAAQAAAAGAAUAAQAGAAUAAAAHAAAAAQAHAAAAAAAHAAEAAQAHAAEAAAAHAAIAAQAHAAIAAAAHAAMAAQAHAAMAAAAHAAQAAQAHAAQAAAAHAAUAAQAHAAUAAAAIAAAAAQAIAAAAAAAIAAEAAQAIAAEAAAAIAAIAAQAIAAIAAAAIAAMAAQAIAAMAAAAIAAQAAQAIAAQAAAAIAAUAAQAIAAUAAAAJAAAAAQAJAAAAAAAJAAEAAQAJAAEAAAAJAAIAAQAJAAIAAAAJAAMAAQAJAAMAAAAJAAQAAQAJAAQAAAAJAAUAAQAJAAUAAAAKAAAAAQAKAAAAAAAKAAEAAQAKAAEAAAAKAAIAAQAKAAIAAAAKAAMAAQAKAAMAAAAKAAQAAQAKAAQAAAAKAAUAAQAKAAUAAAALAAAAAQALAAAAAAALAAEAAQALAAEAAAALAAIAAQALAAIAAAALAAMAAQALAAMAAAALAAQAAQALAAQAAAALAAUAAQALAAUAAAAMAAAAAQAMAAAAAAAMAAEAAQAMAAEAAAAMAAIAAQAMAAIAAAAMAAMAAQAMAAMAAAAMAAQAAQAMAAQAAAAMAAUAAQAMAAUAAAANAAAAAQANAAAAAAANAAEAAQANAAEAAAANAAIAAQANAAIAAAANAAMAAQANAAMAAAANAAQAAQANAAQAAAANAAUAAQANAAUAAAAOAAAAAQAOAAAAAAAOAAEAAQAOAAEAAAAOAAIAAQAOAAIAAAAOAAMAAQAOAAMAAAAOAAQAAQAOAAQAAAAOAAUAAQAOAAUAAAAPAAAAAQAPAAAAAAAPAAEAAQAPAAEAAAAPAAIAAQAPAAIAAAAPAAMAAQAPAAMAAAAPAAQAAQAPAAQAAAAPAAUAAQAPAAUAAAAQAAAAAQAQAAAAAAAQAAEAAQAQAAEAAAAQAAIAAQAQAAIAAAAQAAMAAQAQAAMAAAAQAAQAAQAQAAQAAAAQAAUAAQAQAAUAAAARAAAAAQARAAAAAAARAAEAAQARAAEAAAARAAIAAQARAAIAAAARAAMAAQARAAMAAAARAAQAAQARAAQAAAARAAUAAQARAAUAAAASAAAAAQASAAAAAAASAAEAAQASAAEAAAASAAIAAQASAAIAAAASAAMAAQASAAMAAAASAAQAAQASAAQAAAASAAUAAQASAAUAAAATAAAAAQATAAAAAAATAAEAAQATAAEAAAATAAIAAQATAAIAAAATAAMAAQATAAMAAAATAAQAAQATAAQAAAATAAUAAQATAAUAAAAUAAAAAQAUAAAAAAAUAAEAAQAUAAEAAAAUAAIAAQAUAAIAAAAUAAMAAQAUAAMAAAAUAAQAAQAUAAQAAAAUAAUAAQAUAAUAAAAVAAAAAQAVAAAAAAAVAAEAAQAVAAEAAAAVAAIAAQAVAAIAAAAVAAMAAQAVAAMAAAAVAAQAAQAVAAQAAAAVAAUAAQAVAAUAAAAWAAAAAQAWAAAAAAAWAAEAAQAWAAEAAAAWAAIAAQAWAAIAAAAWAAMAAQAWAAMAAAAWAAQAAQAWAAQAAAAWAAUAAQAWAAUAAAAXAAAAAQAXAAAAAAAXAAEAAQAXAAEAAAAXAAIAAQAXAAIAAAAXAAMAAQAXAAMAAAAXAAQAAQAXAAQAAAAXAAUAAQAXAAUAAAAYAAAAAQAYAAAAAAAYAAEAAQAYAAEAAAAYAAIAAQAYAAIAAAAYAAMAAQAYAAMAAAAYAAQAAQAYAAQAAAAYAAUAAQAYAAUAAAAZAAAAAQAZAAAAAAAZAAEAAQAZAAEAAAAZAAIAAQAZAAIAAAAZAAMAAQAZAAMAAAAZAAQAAQAZAAQAAAAZAAUAAQAZAAUAAAAaAAAAAQAaAAAAAAAaAAEAAQAaAAEAAAAaAAIAAQAaAAIAAAAaAAMAAQAaAAMAAAAaAAQAAQAaAAQAAAAaAAUAAQAaAAUAAAAbAAAAAQAbAAAAAAAbAAEAAQAbAAEAAAAbAAIAAQAbAAIAAAAbAAMAAQAbAAMAAAAbAAQAAQAbAAQAAAAbAAUAAQAbAAUAAAAAAAAAAQAAAAAAAAAcAAAAAQAcAAAAAAAcAAEAAQAcAAEAAAAcAAIAAQAcAAIAAAAcAAMAAQAcAAMAAAAcAAQAAQAcAAQAAAAcAAUAAQAcAAUAAAA=")
tile_set = SubResource("TileSet_gwbqk")

[node name="porta" type="AnimatedSprite2D" parent="TileMapLayer"]
position = Vector2(64.0691, 32.0345)
scale = Vector2(1.00713, 1)
sprite_frames = SubResource("SpriteFrames_w7gat")
frame_progress = 0.548098

[node name="porta2" type="AnimatedSprite2D" parent="TileMapLayer"]
position = Vector2(179.983, 32.0345)
scale = Vector2(1.00713, 1)
sprite_frames = SubResource("SpriteFrames_w7gat")
frame_progress = 0.19455

[node name="porta3" type="AnimatedSprite2D" parent="TileMapLayer"]
position = Vector2(295.898, 32.0345)
scale = Vector2(1.00713, 1)
sprite_frames = SubResource("SpriteFrames_w7gat")
frame_progress = 0.19455

[node name="porta4" type="AnimatedSprite2D" parent="TileMapLayer"]
position = Vector2(412.12, 32.0173)
scale = Vector2(1.01069, 1.00054)
sprite_frames = SubResource("SpriteFrames_w7gat")
frame_progress = 0.19455

[node name="CharacterBody2D" parent="." instance=ExtResource("8_r0eml")]
position = Vector2(118, 0)
scale = Vector2(0.962898, 0.98269)

[node name="colisões" type="StaticBody2D" parent="."]

[node name="limite da tela" type="CollisionShape2D" parent="colisões"]
visible = false
position = Vector2(-10, 48)
shape = SubResource("RectangleShape2D_u1ch8")

[node name="limite da tela2" type="CollisionShape2D" parent="colisões"]
visible = false
position = Vector2(224, 106)
shape = SubResource("RectangleShape2D_i4j0q")

[node name="limite da tela3" type="CollisionShape2D" parent="colisões"]
position = Vector2(470.823, 48.0518)
shape = SubResource("RectangleShape2D_diiwb")

[node name="limite da tela4" type="CollisionShape2D" parent="colisões"]
visible = false
position = Vector2(224, -10)
shape = SubResource("RectangleShape2D_wxgb4")

[node name="parede" type="CollisionShape2D" parent="colisões"]
visible = false
position = Vector2(224, 28)
shape = SubResource("RectangleShape2D_2wo5t")
metadata/_edit_lock_ = true

[node name="negocio do canto" type="CollisionShape2D" parent="colisões"]
position = Vector2(1.5, 36)
shape = SubResource("RectangleShape2D_shlko")

[node name="npcrandom" parent="." instance=ExtResource("16_7xfcr")]
position = Vector2(371.769, 74.1852)

[node name="tvzinha" type="AnimatedSprite2D" parent="."]
position = Vector2(111.699, 16.0173)
sprite_frames = SubResource("SpriteFrames_fknab")

[node name="tvzinha2" type="AnimatedSprite2D" parent="."]
position = Vector2(343.95, 16.0173)
sprite_frames = SubResource("SpriteFrames_fknab")

[node name="tempo" type="Timer" parent="."]
wait_time = 60.0

[connection signal="timeout" from="tempo" to="." method="_on_tempo_timeout"]
